Add Views for event emails and recipients

--- a/flask_send_mail/static/css/home.css
+++ b/flask_send_mail/static/css/home.css
@@ -1,85 +1,84 @@
 /*
- * This is the CSS stylesheet for the demo people application
+ * CSS stylesheet for home page
  */
 
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,300,500,700);
-
-body, .ui-btn {
-    font-family: Roboto;
+div.blog {
+    margin: 10px 10px 10px 10px;
+    border: 2px solid darkgrey;
 }
 
-.container {
+.blog table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.blog table caption {
+    font-weight: bold;
+    padding: 10px 0 10px 0;
+    border-bottom: 2px solid darkgrey;
+    background-color: antiquewhite;
+}
+
+.blog table thead {
+    padding: 10px 0 10px 0;
+}
+
+th:not(:last-child), td:not(:last-child) {
+    border-right: 2px solid darkgrey;
+}
+
+td.id {
+    text-align: center;
+    cursor: pointer;
+}
+
+td.event {
+    text-align: center;
     padding: 10px;
 }
 
-.banner {
+td.center {
     text-align: center;
 }
 
-.editor {
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 5px;
-    border: 1px solid lightgrey;
-    border-radius: 3px;
-    margin-bottom: 5px;
-}
-
-label {
-    display: inline-block;
-    margin-bottom: 5px;
-}
-
-button {
-    padding: 5px;
-    margin-right: 5px;
-    border-radius: 3px;
-    background-color: #eee;
-}
-
-.people {
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 5px;
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-table, caption, th, td {
-    border: 1px solid lightgrey;
-}
-
-table caption {
-    height: 33px;
-    font-weight: bold;
-    padding-top: 5px;
-    border-bottom: none;
-}
-
-tr {
-    height: 33px;
-}
-
-tr:nth-child(even) {
-    background-color: #f0f0f0
-}
-
-td {
+td.name {
     text-align: center;
+    width: 175px;
+    cursor: pointer;
 }
 
-.error {
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
+td.timestamp {
+    text-align: center;
+    width: 280px;
+}
+
+td.content {
+    text-align: left;
+    padding-left: 5px;
+}
+
+td li.pad-5 {
     padding: 5px;
-    border: 1px solid lightgrey;
-    border-radius: 3px;
-    background-color: #fbb;
-    visibility: hidden;
+}
+
+tbody tr:nth-child(odd) {
+    background-color: gainsboro;
+}
+
+tbody td.name, tbody td.content {
+    cursor: pointer;
+    height: 33px;
+}
+
+thead tr {
+    height: 33px;
+    border-bottom: 2px solid darkgrey;
+}
+
+tbody tr:not(:last-child) {
+    border-bottom: 2px solid darkgrey;
+}
+
+tbody tr:hover {
+    background-color: powderblue;
 }
