--- a/flask_send_mail/templates/home.html
+++ b/flask_send_mail/templates/home.html
@@ -1,49 +1,56 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Application Home Page</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" href="static/css/home.css">
-    <script
-      src="http://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous">
-    </script>
-</head>
-<body>
-    <div class="container">
-        <h1 class="banner">Event Application</h1>
-        <div class="section editor">
-            <label for="fname">First Name
-                <input id="fname" type="text" />
-            </label>
-            <br />
-            <label for="lname">Last Name
-                <input id="lname" type="text" />
-            </label>
-            <br />
-            <button id="create">Create</button>
-            <button id="update">Update</button>
-            <button id="delete">Delete</button>
-            <button id="reset">Reset</button>
-        </div>
-        <div class="people">
-            <table>
-                <caption>People</caption>
-                <thead>
-                    <tr>
-                        <th>First Name</th>
-                        <th>Last Name</th>
-                        <th>Schedule To Send</th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-        </div>
-        <div class="error">
-        </div>
-    </div>
-</body>
-<script src="static/js/home.js"></script>
-</html>
+{% extends "base.html" %}
+{% block title %}Home{% endblock %}
+{% block head %}
+    {{ super() }}
+    <link rel="stylesheet" href="/static/css/home.css">
+{% endblock %}
+
+{% block page_name %}Event Email Application{% endblock %}
+
+{% block body %}
+<div class="blog">
+    <table>
+        <caption>Event Email Lists</caption>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Event ID</th>
+                <th>Email Subject</th>
+                <th>Email Content</th>
+                <th>Schedule to send</th>
+                <th>Recipients</th>
+            </tr>
+        </thead>
+    </table>
+</div>
+<div class="error">
+</div>
+
+<!-- Handlebars script tag entry -->
+{% raw %}
+<script id="table-template" type="text/x-handlebars-template">
+    <tbody>
+        {{#each data}}
+        <tr data-person_id="{{person.person_id}}" data-note_id="{{note_id}}">
+            <td class="id">{{ id }}</td>
+            <td class="event">{{ event_id }}</td>
+            <td class="center">{{ email_subject }}</td>
+            <td class="center">{{ email_content }}</td>
+            <td class="timestamp">{{formatTimestamp timestamp}}</td>
+            <td class="center">
+                {{#each recipients}}
+                    <li class="pad-5">{{ name }} - ({{ email }})</li>
+                {{/each}}
+            </td>
+        </tr>
+        {{/each}}
+    </tbody>
+</script>
+{% endraw %}
+
+{% endblock %}
+
+{% block javascript %}
+{{ super() }}
+<script src="/static/js/home.js"></script>
+{% endblock %}
